2006-05-25  Josh Stone  <joshua.i.stone@intel.com>

	* parse.cxx (parser::scan_pp): Free memory for tokens that are
	thrown away in the preprocessing stage.
	* tapsets.cxx
	(dwarf_var_expanding_copy_visitor::visit_target_symbol):
	Free allocated memory when supressing target-variable errors

2006-05-25  David Smith  <dsmith@redhat.com>

	* testsuite/semok/twentyone.stp: New file.

2006-05-24  Frank Ch. Eigler  <fche@elastic.org>

	Pass 4 speedup.
	* tapsets.cxx (derived_probe::emit_common_header): New
	function, to emit code formerly inlined by
	emit_probe_prologue/epilogue.
	* translate.cxx (emit_common_header): Call it.
	* elaborate.h: Corresponding changes.

2006-05-24  David Smith  <dsmith@redhat.com>

	* elaborate.cxx (isglob): New function.
	(match_key::globmatch): New function.
	(match_node::find_and_build): Uses isglob() and
	match_key::globmatch() to provide support for wildcards such as
	"kernel.syscall.*read*" (Bugzilla #1928).
	* elaborate.h (match_key::globmatch): Added function declaration.
	* parse.cxx (parser::parse_probe_point): Collects one or more
	tokens into a single probe-point functor string.

	* testsuite/parseko/twentytwo.stp: New file.
	* testsuite/parseok/sixteen.stp: New file.

2006-05-24  David Smith  <dsmith@redhat.com>

	* testsuite/parseko/cmdlinearg01.stp: New file.
	* testsuite/parseko/cmdlinearg02.stp: New file.
	* testsuite/parseko/eighteen.stp: New file.
	* testsuite/parseko/foreachstmt01.stp: New file.
	* testsuite/parseko/foreachstmt02.stp: New file.
	* testsuite/parseko/foreachstmt03.stp: New file.
	* testsuite/parseko/foreachstmt04.stp: New file.
	* testsuite/parseko/foreachstmt05.stp: New file.
	* testsuite/parseko/forstmt01.stp: New file.
	* testsuite/parseko/forstmt02.stp: New file.
	* testsuite/parseko/forstmt03.stp: New file.
	* testsuite/parseko/forstmt04.stp: New file.
	* testsuite/parseko/functiondecl01.stp: New file.
	* testsuite/parseko/functiondecl02.stp: New file.